<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/bills">
            <menu>
                <item
                    android:id="@+id/nav_bills_own_open"
                    android:enabled="false"
                    android:title="@string/bills_own_open" />
                <item
                    android:id="@+id/nav_bills_all_open"
                    android:enabled="false"
                    android:title="@string/bills_all_open" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/waiter_account">
            <menu>
                <item
                    android:id="@+id/nav_waiter_account_settings"
                    android:title="@string/waiter_account_settings" />
                <item
                    android:id="@+id/nav_waiter_account_permissions"
                    android:enabled="false"
                    android:title="@string/waiter_account_permissions" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_waiter_account_login"
            android:title="@string/waiter_account_login" />
        <item
            android:id="@+id/nav_waiter_account_register"
            android:title="@string/waiter_account_register" />
    </group>
</menu>
