<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/beestro_sign" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/medium_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Wprowadź dane logowania" />

        <ViewFlipper
            android:id="@+id/register_step_flipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/normal_margin">

            <LinearLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user"
                    android:textColor="@color/colorAccentLight"
                    android:textColorHint="@color/colorAccentLight">

                    <EditText
                        android:id="@+id/user_id_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/password" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColor="@color/colorAccentLight"
                    android:textColorHint="@color/colorAccentLight">

                    <EditText
                        android:id="@+id/user_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <me.zhanghai.android.patternlock.PatternView
                android:id="@+id/pattern_view"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_gravity="center"
                app:pl_regularColor="@color/colorAccent" />

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </ViewFlipper>

        <Button
            android:id="@+id/action_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/register_step_flipper"
            android:text="@string/next"
            android:textColor="@color/colorAccentLight" />

    </RelativeLayout>

</ScrollView>
